<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<!--
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_dedupe_hash"
        android:title="@string/pref_title_dedupe_hash" />
-->
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_caption"
        android:inputType="textMultiLine|textNoSuggestions"
        android:key="example_text"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_title_caption"
        />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
<!--
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_hashtags_titles"
        android:entryValues="@array/pref_example_hashtags_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_hashtags" />


    <Preference
        android:title="Delete Data"
        android:summary="Delete all data">
        <intent android:action="android.intent.action.MAIN"
            android:targetClass=""
            android:targetPackage="${packageName}"
            />
    </Preference>


    <Preference
        android:title="Help"
        android:summary="Launch the Intro Slideshow">
        <intent
            android:targetPackage="net.schueller.instarepost"
            android:targetClass="net.schueller.instarepost.activities.IntroActivity"/>
    </Preference>
    -->

    <SwitchPreference
        android:key="pref_persistent_cb_listener"
        android:title="@string/pref_title_persistent_clipboard"
        android:summary="@string/pref_description_persistent_clipboard"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="pref_multiple_repost_intent"
        android:title="@string/pref_title_multiple_repost_intent"
        android:summary="@string/pref_description_multiple_repost_intent"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="pref_collect_stats"
        android:title="@string/pref_title_pref_collect_stats"
        android:summary="@string/pref_description_pref_collect_stats"
        android:defaultValue="false" />

    <EditTextPreference
        android:key="pref_instagram_username"
        android:dependency="pref_collect_stats"
        android:defaultValue="@string/pref_default_instagram_username"
        android:inputType="textNoSuggestions"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_instagram_username"
        />


    <Preference android:key="pref_about_build"
        android:title="@string/build_version"
        android:summary="@string/versionName"  />

    <Preference android:key="pref_clear_all"
        android:title="@string/clear_all_data"
        android:summary="@string/clear_all_data_desc"  />

</PreferenceScreen>
