<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dip">

    <androidx.cardview.widget.CardView

        android:id="@+id/card_view"
        style="@style/CardView.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp">

        <RelativeLayout
            android:id="@+id/card_pending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:paddingTop="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#fff"/>

            <TextView
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:paddingTop="4dp"
                android:id="@+id/status_info"
                android:layout_below="@id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />

            <Button
                android:text="@string/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:id="@+id/retry_button"
                android:visibility="gone"
                android:textColor="#70c461"
                style="@android:style/Widget.DeviceDefault.Button.Borderless" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/card_downloaded"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="0dp"
            >

            <ImageView
                android:id="@+id/image"
                android:layout_width="120dp"
                android:padding="0dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/post_thumbnail"
                />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:maxLines="3"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="0dp"
                android:paddingTop="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:layout_toEndOf="@id/image"
                android:layout_toRightOf="@id/image"/>

            <TextView
                android:id="@+id/caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:padding="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:paddingTop="4dp"
                android:layout_below="@+id/username"
                android:layout_gravity="top"
                android:textColor="#fff"
                android:textSize="14sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@id/image"
                android:layout_toRightOf="@id/image" />

            <Button
                android:text="@string/post_repost_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:id="@+id/repost_button"
                android:layout_toRightOf="@+id/image"
                android:layout_toEndOf="@+id/image"
                android:textColor="#70c461"
                style="@android:style/Widget.DeviceDefault.Button.Borderless" />

            <Button
                android:text="@string/post_share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#70c461"
                android:id="@+id/share_button"
                style="@android:style/Widget.DeviceDefault.Button.Borderless" />

            <com.joanzapata.iconify.widget.IconTextView
                android:padding="3dp"
                android:text="@string/post_is_video"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="3"
                android:textSize="25sp"
                android:shadowColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/isVideo"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/username"
                android:layout_toStartOf="@+id/username"
                android:textColor="@android:color/white"
                android:textAlignment="textEnd"
                android:layout_gravity="end" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>